<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProjectX</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Login">Login</string>
    <string name="FacebookLogin">Sign in with Facebook</string>
    <string name="GoogleLogin">Sign in with Google+</string>
    <string name="TwitterLogin">Sign in with Twitter</string>
    <string name="SignUp"><a href="http://www.google.com">Sign up with Service</a></string>
    <string name="ForgotPass"><a href="http://www.google.com">Forgot Password?</a></string>

    <style name="ButtonText">
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">15sp</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_push_data">PushData</string>

</resources>
