<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:weightSum="1"
        android:id="@+id/linearLayout">

        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_launcher" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2"
        android:layout_centerInParent="true"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtUser"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"
            android:textSize="17sp"
            android:hint="User Name"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtPass"
            android:layout_gravity="right"
            android:password="true"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"
            android:textSize="17sp"
            android:hint="Password"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Login"
            android:id="@+id/btLogin"
            android:onClick="onClickLogin"
            android:layout_gravity="center_horizontal"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/linearlayout_bg"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="20dp"
        android:id="@+id/linearLayout3"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/btnGplus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="4dp"
            android:background="@drawable/layers_gplus_button_bg"
            android:text="@string/GoogleLogin"
            />
        <Button
            android:id="@+id/btnFb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="4dp"
            android:background="@drawable/layers_fb_button_bg"
            android:text="@string/FacebookLogin"
            />
        <Button
            android:id="@+id/btnTwitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="4dp"
            android:background="@drawable/layers_twitter_button_bg"
            android:text="@string/TwitterLogin"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:linksClickable="true"
            android:text="@string/SignUp"
            android:textSize="17sp"
            android:autoLink="web"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:linksClickable="true"
            android:text="@string/ForgotPass"
            android:textSize="17sp"
            android:autoLink="web"
            android:layout_marginTop="5dp"
            android:visibility="invisible"
            android:id="@+id/lnkForgetPw"/>

    </LinearLayout>

</RelativeLayout>
